Now shows realm chooser in App Fixed connect button doesn't show on disconnect Fixed able to see menu buttons on unsupported chains Fixed navigating to starter when address is not loaded initially Fixed MonsterCard distorted on larger screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,6 +32,55 @@ body {
         }
     }
 
+    .realm-chooser-container {
+        width: 100%;
+        max-width: 900px;
+        min-height: 100vh;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        h1 {
+            font-size: 80px;
+            font-family: 'Starguard';
+            color: white;
+            margin-bottom: 30px;
+
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: rgba(0,0,0,0.5) !important;
+
+            @media screen and (max-width: 900px) {
+                margin-top: 40px;
+                font-size: 40px;
+            }
+        }
+
+        .navigate-button {
+            background-color: white;
+    
+            text-transform: uppercase;
+            font-family: 'Starguard';
+            letter-spacing: 3px;
+            font-size: 50px;
+            width: 250px;
+    
+            padding: 5px 20px;
+            margin-bottom: 10px;
+            border: 5px solid black;
+            border-radius: 10px;
+    
+            &:last-child {
+                margin-bottom: 0;
+            }
+    
+            &.active {
+                border: 5px solid #00000033
+            }
+        }
+    }
+
     > .spinner-container { 
         background-color: black;
         opacity: 0;
